<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:orientation="vertical"
    android:background="@color/design_default_color_error">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <EditText
            android:id="@+id/update_popup_id"
            android:hint="@string/editNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="3dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/update_popup_name"
            android:hint="@string/editName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="3dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/update_popup_type_one"
            android:hint="@string/editTypeOne"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="3dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/update_popup_type_two"
            android:hint="@string/editTypeTwo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="3dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/update_popup_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_update"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>

</LinearLayout>